# djangoProject

./: pyproject.toml
companies/: models.py  views.py
companies/migrations/: 0001_initial.py
djangoProject/: settings.py  urls.py
vacancies/: models.py  views.py
vacancies/migrations/: 0001_initial.py  0002_vacancy_user_alter_vacancy_status.py  0003_skill_vacancy_skills.py  0004_alter_skill_options_alter_vacancy_options.py  0005_skill_is_active.py
