[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["porublevnik <porublevnik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
psycopg2-binary = "^2.9.6"
pillow = "^9.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
